objects/Network_Site__c.object
<CustomObject>
    <fields>
        <fullName>Access_Request_Details__c</fullName>
        <label>Access Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Access_reset_issues__c</fullName>
        <label>Access reset/issues</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Inquiry</fullName>
                    <default>true</default>
                    <label>Customer Inquiry</label>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gayla O&apos;Fihelly</fullName>
                </value>
                <value>
                    <fullName>Jennie Tidwell</fullName>
                </value>
                <value>
                    <fullName>Lisa Dunn</fullName>
                </value>
                <value>
                    <fullName>Lori Linthicum</fullName>
                </value>
                <value>
                    <fullName>Matt Sautter</fullName>
                </value>
                <value>
                    <fullName>Mercedes Stolcis</fullName>
                </value>
                <value>
                    <fullName>Michael Croney</fullName>
                </value>
                <value>
                    <fullName>Patty Miller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Network Sites</relationshipLabel>
        <relationshipName>Network_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App1_Server_IP_Address__c</fullName>
        <label>App1 Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App1_Server__c</fullName>
        <label>App1 Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App2_Server_IP_Address__c</fullName>
        <label>App2 Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App2_Server__c</fullName>
        <label>App2 Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_to_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available to Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_Up_Strategy__c</fullName>
        <label>Back Up Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPU__c</fullName>
        <label>CPU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case that is being researched or replicated</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Network Sites</relationshipLabel>
        <relationshipName>Network_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration__c</fullName>
        <label>Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Backup_Software__c</fullName>
        <label>Customer Backup Software</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Backup</fullName>
                </value>
                <value>
                    <fullName>Backup Exec</fullName>
                </value>
                <value>
                    <fullName>Enterprise Manager RMAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_2_IP_Address__c</fullName>
        <label>DB 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Alerts_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB Alerts Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Capacity__c</fullName>
        <label>DB Capacity Available</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_IP__c</fullName>
        <label>DB IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Server_2__c</fullName>
        <label>DB Server 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Server__c</fullName>
        <label>DB Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Size__c</fullName>
        <label>DB Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB__c</fullName>
        <label>DB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Completion_Date__c</fullName>
        <label>DT Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DT__c</fullName>
        <description>DT ticket associated</description>
        <label>DT #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Installed__c</fullName>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_DB_Size_check__c</fullName>
        <label>Date of DB Size check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Short__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Data_Guard_Server_1_IP_Address__c</fullName>
        <label>EDA/Data Guard Server 1 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Data_Guard_Server_1__c</fullName>
        <label>EDA/Data Guard Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Data_Guard_Server_2_IP_Address__c</fullName>
        <label>EDA/Data Guard Server 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Data_Guard_Server_2__c</fullName>
        <label>EDA/Data Guard Server 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_IP_Address__c</fullName>
        <label>EDA IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Password__c</fullName>
        <label>EDA Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Server__c</fullName>
        <label>EDA Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_User_Name__c</fullName>
        <label>EDA User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDS_IP_Address_2__c</fullName>
        <label>EDS IP Address (2)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDS_IP_Address__c</fullName>
        <label>EDS IP Address (1)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDS_Server_2__c</fullName>
        <label>EDS Server (2)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDS_Server__c</fullName>
        <label>EDS Server (1)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eclipse_Login__c</fullName>
        <label>Eclipse Login</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eclipse_Password__c</fullName>
        <label>Eclipse Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eclipse_Plus_RAC__c</fullName>
        <label>Eclipse Plus RAC / Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUPPRAC</fullName>
                </value>
                <value>
                    <fullName>TECHRAC</fullName>
                </value>
                <value>
                    <fullName>EPLUSRAC</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Test Bed #1</fullName>
                </value>
                <value>
                    <fullName>Test Bed #2</fullName>
                </value>
                <value>
                    <fullName>Test Bed #3</fullName>
                </value>
                <value>
                    <fullName>Test Bed #4</fullName>
                </value>
                <value>
                    <fullName>Test Bed #5</fullName>
                </value>
                <value>
                    <fullName>Test Bed #6</fullName>
                </value>
                <value>
                    <fullName>Test Bed #7</fullName>
                </value>
                <value>
                    <fullName>EXTERNAL</fullName>
                </value>
                <value>
                    <fullName>Test Bed #8</fullName>
                </value>
                <value>
                    <fullName>Test Bed #9</fullName>
                </value>
                <value>
                    <fullName>Test Bed #10</fullName>
                </value>
                <value>
                    <fullName>Test Bed #11</fullName>
                </value>
                <value>
                    <fullName>Test Bed #12</fullName>
                </value>
                <value>
                    <fullName>Test Bed #13</fullName>
                </value>
                <value>
                    <fullName>Test Bed #14</fullName>
                </value>
                <value>
                    <fullName>Test Bed #15</fullName>
                </value>
                <value>
                    <fullName>Test Bed #16</fullName>
                </value>
                <value>
                    <fullName>Test Bed #17</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #1</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #2</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #3</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #4</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #5</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #6</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #7</fullName>
                </value>
                <value>
                    <fullName>xGL Test Bed #8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eclipse_Version__c</fullName>
        <label>Eclipse Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3.2.4.0</fullName>
                </value>
                <value>
                    <fullName>3.2.4.1</fullName>
                </value>
                <value>
                    <fullName>3.2.5</fullName>
                </value>
                <value>
                    <fullName>3.2.6</fullName>
                </value>
                <value>
                    <fullName>4.0.0.0</fullName>
                </value>
                <value>
                    <fullName>4.0.0.1</fullName>
                </value>
                <value>
                    <fullName>4.0.1</fullName>
                </value>
                <value>
                    <fullName>4.0.2</fullName>
                </value>
                <value>
                    <fullName>4.0.2.1</fullName>
                </value>
                <value>
                    <fullName>4.0.2.2</fullName>
                </value>
                <value>
                    <fullName>4.0.2.3</fullName>
                </value>
                <value>
                    <fullName>4.0.3.0</fullName>
                </value>
                <value>
                    <fullName>4.0.3.1</fullName>
                </value>
                <value>
                    <fullName>4.0.3.2</fullName>
                </value>
                <value>
                    <fullName>4.0.3.3</fullName>
                </value>
                <value>
                    <fullName>4.0.4.0</fullName>
                </value>
                <value>
                    <fullName>4.0.4.1</fullName>
                </value>
                <value>
                    <fullName>4.0.4.2</fullName>
                </value>
                <value>
                    <fullName>4.0.4.3</fullName>
                </value>
                <value>
                    <fullName>4.1.0</fullName>
                </value>
                <value>
                    <fullName>4.1.0.1</fullName>
                </value>
                <value>
                    <fullName>4.1.0.2</fullName>
                </value>
                <value>
                    <fullName>4.1.0.3</fullName>
                </value>
                <value>
                    <fullName>4.1.0.4</fullName>
                </value>
                <value>
                    <fullName>4.1.1.0</fullName>
                </value>
                <value>
                    <fullName>4.1.1.1</fullName>
                </value>
                <value>
                    <fullName>4.1.1.2</fullName>
                </value>
                <value>
                    <fullName>4.1.1.3</fullName>
                </value>
                <value>
                    <fullName>4.1.2.0</fullName>
                </value>
                <value>
                    <fullName>4.1.2.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Health_Check_Schedule__c</fullName>
        <label>Health Check Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historical_Account_Name__c</fullName>
        <label>Historical Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Backup_Format__c</fullName>
        <label>Internal Backup Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Data Dump</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_date__c</fullName>
        <label>Live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Headnets__c</fullName>
        <label>Max Headnets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merge_Server_IP__c</fullName>
        <label>Merge Server IP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Server_Name__c</fullName>
        <label>Merge Server Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NT_Login__c</fullName>
        <label>NT Login</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NT_Password__c</fullName>
        <label>NT Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nagra_AE__c</fullName>
        <label>Nagra AE</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nagra_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nagra Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Config__c</fullName>
        <label>Oracle Config</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>RAC One Node</fullName>
                </value>
                <value>
                    <fullName>RAC Two Node</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_File_System__c</fullName>
        <label>Oracle File System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTFS</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_Version__c</fullName>
        <label>Oracle Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Ops</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Sys Admin</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Dev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Anywhere_Login__c</fullName>
        <label>PC Anywhere Login</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Anywhere_Password__c</fullName>
        <label>PC Anywhere Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagefile__c</fullName>
        <label>Pagefile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Network_Site__c</referenceTo>
        <relationshipLabel>Network Sites</relationshipLabel>
        <relationshipName>ChildAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <description>How recent is the data?</description>
        <label>Back-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Permission__c</fullName>
        <label>Requires Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reservation_End_Date__c</fullName>
        <label>Reservation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reservation_Start_Date__c</fullName>
        <label>Reservation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reserved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Network_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rpt_3_IP_Address__c</fullName>
        <label>Rpt 3 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_4_IP_Address__c</fullName>
        <label>Rpt 4 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_IP_Address__c</fullName>
        <label>Rpt 1 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_Server_1__c</fullName>
        <label>Rpt Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_Server_2__c</fullName>
        <label>Rpt Server 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_Server_3__c</fullName>
        <label>Rpt Server 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Password__c</fullName>
        <label>SQL Password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Service__c</fullName>
        <label>SQL Service</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Username__c</fullName>
        <label>SQL Username</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Forecast_Name__c</fullName>
        <description>customer name for reporting consolidation</description>
        <inlineHelpText>Customer name for consolidating Accounts in reporting</inlineHelpText>
        <label>Sales Forecast Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Configuration__c</fullName>
        <label>Server Configuration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3:1</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Web+Report</fullName>
                </value>
                <value>
                    <fullName>EDA</fullName>
                </value>
                <value>
                    <fullName>ESM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Notes__c</fullName>
        <label>Server Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request Case #</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Network Sites (Service Request Case #)</relationshipLabel>
        <relationshipName>Network_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <inlineHelpText>This is the abbreviation that will be used to append to the front of an opportunity name.</inlineHelpText>
        <label>Short Name</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_in_Forecast__c</fullName>
        <defaultValue>true</defaultValue>
        <description>flag to show or hide an account in the Sales Forecast report</description>
        <label>Show in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <label>SIC Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_DB_Copy__c</fullName>
        <label>Site DB Copy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Account Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>